# ProKu

./: .gitignore
ProKu/: basicProf.code-profile
ProKu/Aufgabe1/: Bailey-Borwein-Plouffe-Formel.cpp  CMakeLists.txt  Primzahlen.cpp  teilA.cpp
ProKu/Aufgabe10/: CMakeLists.txt  aufgabe10.cpp
ProKu/Aufgabe2/: CMakeLists.txt  DatumWochentag.cpp  Rechner.cpp
ProKu/Aufgabe3/: CMakeLists.txt  aufgabe3c.cpp  dbe.cpp  dbe.hpp  ggT.cpp  ggT.hpp  kgV.cpp  kgV.hpp  main.cpp
ProKu/Aufgabe4/: CMakeLists.txt  aufgabe4.cpp
ProKu/Test/: CMakeLists.txt  test.cpp
ProKu/aufgabe11/: CMakeLists.txt  aufgabe11.cpp  canvas.hpp  canvas_window.cpp  canvas_window.hpp  example3.cpp
ProKu/aufgabe5/: CMakeLists.txt  aufgabe5b.cpp  aufgabe5c.cpp  aufgabe5d.cpp
ProKu/aufgabe5/aufgabe5a/: ptr1.cpp  ptr2.cpp  ptr3.cpp  ptr4.cpp  ptr5.cpp  ptr6.cpp
ProKu/aufgabe6/: CMakeLists.txt  aufgabe6.cpp
ProKu/aufgabe6/Home/: CMakeLists.txt  aufgabe6.cpp
ProKu/aufgabe7/: CMakeLists.txt  Rational.cpp  Rational.hpp  aufgabe7.cpp
ProKu/aufgabe8/: CMakeLists.txt  IntList.cpp  IntList.hpp  IntListElement.cpp  IntListElement.hpp  aufgabe8.cpp  aufgabe8.hpp  load_valgrind.sh  zDasMussInTerminalAufWindows
ProKu/aufgabe9/: aufgabe9.cpp  image.cpp  image.hpp  jpeg_io.cpp
ProKu/aufgabe9 - Home/: CMakeLists.txt  image.hpp  jpeg_io.cpp  jpeg_io.hpp
